HTTP/httpd.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: httpd
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
  namespace: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd
    spec:
      containers:
      - image: shryu1/http:latest
        name: httpd
        ports:
        - containerPort: 80
        resources: {}
      imagePullSecrets:
      - name: docker
      nodeSelector:
        key: worker1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd-svc
  namespace: httpd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
